<resources>
    <string name="app_name">TourisView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="unregistered">Don\'t have account?</string>
    <string name="registered">Have Account?</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="bookmark">Bookmark</string>
    <string name="history">History</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="camera_failed">Failed to load the camera</string>
    <string name="capture_failed">Failed to take picture</string>
    <string name="upload">Upload</string>
    <string name="title_activity_select_location">SelectLocationActivity</string>
    <string name="map_input">Map input</string>
    <string name="select_location">Select Location</string>
    <string name="empty_gallery_result">No photo have been selected yet</string>
    <string name="scene_picture">Scene Picture</string>
    <string name="destination_name">Destination Name</string>
    <string name="error">Something went wrong</string>
    <string name="title_activity_destination_map_location">DestinationMapLocation</string>
    <string name="destination_location">Destination Location</string>
</resources>